  option that is set. Instead, use nm_connection_verify() to validate
  the profile.
* libnm: add support for reading/writing keyfile format.
* initrd: support for rd.net.timeout.carrier option.
* initrd: support new ip method "link6" for IPv6 link-local only.
* ci: use ci-templates for containers on gitlab-ci.
* ci: test build against Alpine Linux on gitlab-ci.
* Many bugfixes and improvements.

=============================================
NetworkManager-1.28
Overview of changes since NetworkManager-1.26
=============================================

* Introduce a new "rc-manager=auto" setting and make it the default,
  unless a different default is chosen at compile time.  This mode
  tries to detect "systemd-resolved", "resolvconf", and "netconfig"
  and chooses the mode that seems most suitable depending on build
  setting and runtime detection.  "resolvconf" and "netconfig" are
  only considered iff NetworkManager was built with the respective
  options enabled.
* The long deprecated D-Bus property "Ip4Address" on
  "org.freedesktop.NetworkManager.Device" interface is now defunct and
  always returns zero.
* Introduce a ipv4.dhcp-reject-servers connection property that
  specifies a list of DHCP server-ids from which offers should be
  rejected.
* Add a ipv4.dhcp-vendor-class-identifier connection property to send
  a custom value for the Vendor Class Identifier DHCP option.
* Support obtaining the system hostname through the FQDN DHCPv6
  option.
* dbus: don't require policykit permission for GetAppliedConnection of
  a device.
* When supported by kernel, use netlink to configure bridge settings
  instead of writing to sysfs.
* Deprecate the "active_slave" bond option which now has the same effect
  as setting the "primary" option.
* The initrd generator now also accepts MAC addresses to indicate
  interfaces.
* Add a new provider for nm-cloud-setup to support automatic network
  configuration on Azure.